--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Universo</h2>
+        <center><h2 class="titulo-principal">Universo</h2></center>
 <div class="botoes">
-        <button class="botao">Temas</button>
-        <button class="botao">Objetivo</button>
-        <button class="botao">Criar um portfolio</button>
-        <button class="botao">Atualizar meu currículo</button>
+        <button class="botao">Todos</button>
+        <button class="botao">Atualidade</button>
+        <button class="botao">Planetas</button>
+        <button class="botao"></button>
  </div>
 </section>
 
