--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
  </div>
 </section>
 
-<img id="Universo" src="nossa-compreensao-do-que-vemos-no-universo-pode-estar-errada-1675635379657_1024.jpg"<center><p>Nesse site você irá conhecer e tirar todas as suas duvidas sobre o cosmos 
+<center><img id="Universo" src="nossa-compreensao-do-que-vemos-no-universo-pode-estar-errada-1675635379657_1024.jpg"</center>
+<center><p>Nesse site você irá conhecer e tirar todas as suas duvidas sobre o cosmos 
         <link rel="stylesheet" href="style.css">
 </head>
 </body>
